# opengl-classic-client

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/game/: camera.rs  mod.rs
src/game/engine/: mod.rs
src/game/engine/event/: mod.rs
src/game/engine/input/: key.rs  mod.rs  mouse.rs
src/game/mesh/: database.rs  mod.rs
src/game/network/: codec.rs  io.rs  mod.rs  packets.rs
src/game/network/client/: handle.rs  handshake.rs  mod.rs  packet.rs  worker.rs
src/game/render_stages/: mod.rs  sky.rs  text.rs  world.rs
src/game/texture/: mod.rs
src/game/world/: mod.rs
src/render/: mod.rs  stage.rs
src/render/opengl/: context.rs  mod.rs  program.rs  texture.rs  vao.rs
src/render/opengl/buffer/: mod.rs  multi.rs
src/render/window/: mod.rs
